// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YooLoginComponent Snapshots should render 1`] = `
<yoo-login
  class="hydrated"
  data-yoo-login-host=""
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            Powered by
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;

exports[`YooLoginComponent Snapshots should render custom left panel header icon 1`] = `
<yoo-login
  class="hydrated"
  data-yoo-login-host=""
  left-panel-header-icon="http://www.twitrcovers.com/wp-content/uploads/2012/10/Star-Wars-l.jpg"
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            Powered by
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;

exports[`YooLoginComponent Snapshots should render custom right panel background 1`] = `
<yoo-login
  background-src="http://www.twitrcovers.com/wp-content/uploads/2012/10/Star-Wars-l.jpg"
  class="hydrated"
  data-yoo-login-host=""
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            Powered by
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;

exports[`YooLoginComponent Snapshots should render full custom component 1`] = `
<yoo-login
  background-src="https://www.pixelstalk.net/wp-content/uploads/2016/06/Star-Wars-Backgrounds.jpg"
  class="success hydrated"
  data-yoo-login-host=""
  left-panel-footer-text="v 4.9.4"
  left-panel-header-icon="./assets/logo/operations_landscape_dark.svg"
  right-panel-footer-text="Powered by: "
  right-panel-title-icon="./assets/logo/operations_landscape_light.svg"
  right-panel-title-text="We improve your store performance"
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            v 4.9.4
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;

exports[`YooLoginComponent Snapshots should render left panel footer text 1`] = `
<yoo-login
  class="hydrated"
  data-yoo-login-host=""
  left-panel-footer-text="this is the left panel footer"
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            this is the left panel footer
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;

exports[`YooLoginComponent Snapshots should render right panel footer icon 1`] = `
<yoo-login
  class="hydrated"
  data-yoo-login-host=""
  right-panel-footer-icon="http://www.twitrcovers.com/wp-content/uploads/2012/10/Star-Wars-l.jpg"
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            Powered by
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;

exports[`YooLoginComponent Snapshots should render right panel footer text 1`] = `
<yoo-login
  class="hydrated"
  data-yoo-login-host=""
  right-panel-footer-text="This is the right panel footer"
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            Powered by
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;

exports[`YooLoginComponent Snapshots should render right panel title icon 1`] = `
<yoo-login
  class="hydrated"
  data-yoo-login-host=""
  right-panel-title-icon="http://www.twitrcovers.com/wp-content/uploads/2012/10/Star-Wars-l.jpg"
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            Powered by
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;

exports[`YooLoginComponent Snapshots should render right panel title text 1`] = `
<yoo-login
  class="hydrated"
  data-yoo-login-host=""
  right-panel-title-text="This is the right panel title"
>
  
  <div
    attr-layout="row"
    class="outer-container"
    data-yoo-login=""
  >
    
    <yoo-modal-controller
      data-yoo-login=""
    />
    
    <div
      attr-layout="column"
      class="right-panel"
      data-yoo-login=""
      justify-content="flex-start"
    >
      
      <div
        attr-layout="column"
        class="right-panel-content"
        data-yoo-login=""
        justify-content="space-between"
      >
        <div
          attr-layout="row"
          class="header mobile"
          data-yoo-login=""
        >
          <div
            class="space-fill"
            data-yoo-login=""
            style="width: 0px"
          />
          <div
            class="logo"
            data-yoo-login=""
          >
            <img
              alt="Yoobic Logo"
              data-yoo-login=""
              height="25"
              src="./assets/logo/operations_simple.svg"
            />
          </div>
          <div
            class="language-container mobile"
            data-yoo-login=""
          >
            <yoo-button
              class="clear squared small"
              data-yoo-login=""
              icon="yo-down"
            />
          </div>
        </div>
        <div
          attr-layout="column"
          class="content"
          data-yoo-login=""
          justify-content="center"
        >
          <div
            attr-layout="row"
            class="login-title"
            data-yoo-login=""
          >
            <div
              class="inner-title"
              data-yoo-login=""
            >
              Log In to Operations.
            </div>
          </div>
          <div
            attr-layout="column"
            class="login-container"
            data-yoo-login=""
          >
            <div
              class="login-subtitle"
              data-yoo-login=""
            >
              Enter your details below
            </div>
            <yoo-form-input-container
              data-yoo-login=""
              label="Email Address"
            >
              <yoo-form-input
                border-color="success"
                class="simple"
                data-yoo-login=""
                id="email-input"
                type="email"
              />
            </yoo-form-input-container>
            <div
              class="password-container"
              data-yoo-login=""
            >
              <yoo-form-input-container
                data-yoo-login=""
                label="Password"
              >
                <yoo-form-input
                  border-color="success"
                  class="simple"
                  data-yoo-login=""
                  id="password-input"
                  show-input-clear="true"
                  show-password-toggle="true"
                  type="password"
                />
              </yoo-form-input-container>
            </div>
            <div
              attr-layout="row"
              class="inner-container"
              data-yoo-login=""
            >
              <div
                class="radio"
                data-yoo-login=""
              >
                
              </div>
              <yoo-button
                class="link-transparent-success"
                data-yoo-login=""
                text="Forgot Password?"
              />
            </div>
            <div
              attr-layout="row"
              attr-layout-align="flex-end"
              class="login-button"
              data-yoo-login=""
            >
              <yoo-button
                class=""
                data-yoo-login=""
                disabled=""
                id="login-btn"
                text="Log In"
              />
            </div>
            
          </div>
        </div>
        <div
          attr-layout="row"
          attr-layout-align="center center"
          class="footer web"
          data-yoo-login=""
        >
          <div
            attr-layout="row"
            class="powered-by"
            data-yoo-login=""
          >
            Powered by
            <div
              class="powered-img"
              data-yoo-login=""
            >
              <img
                data-yoo-login=""
                height="12"
                src="./assets/logo/yoobic_simple_grey.svg"
              />
            </div>
            <div
              class="yoobic-text"
              data-yoo-login=""
            >
              YOOBIC
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</yoo-login>
`;
